# sortlytic

./: .gitignore  AGENTS.md  README-zh.md  README.md  deny.toml
apps/macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos/src-tauri/capabilities/: default.json
apps/macos/src-tauri/src/: accounts.rs  accounts_tests.rs  ai.rs  api_profile_commands.rs  api_profiles.rs  app_runtime.rs  app_state.rs  collection.rs  config_commands.rs  domain.rs  exports.rs  exports_tests.rs  lib.rs  lib_tests.rs  locale_policy.rs  native_window.rs  planning.rs  prompts.rs  providers.rs  providers_tests.rs  records.rs  secrets.rs  secrets_tests.rs  task_commands.rs  tasks.rs  tikhub.rs  workspace.rs
apps/macos/src-tauri/src/accounts/: fields.rs  storage.rs
apps/macos/src-tauri/src/ai/: attempts.rs  collection_intent_schema.rs  collection_plan_schema.rs  generation.rs  intent_plan.rs  parse_lock.rs  provider_client.rs  provider_errors.rs  provider_policy.rs  provider_test_server.rs  tests.rs
apps/macos/src-tauri/src/api_profile_commands/: activation_tests.rs  audit_atomicity_tests.rs  mutation_race_tests.rs  service.rs  tests.rs  validation.rs
apps/macos/src-tauri/src/api_profile_commands/service/: activation.rs
apps/macos/src-tauri/src/api_profiles/: concurrency_tests.rs  mirror.rs  safe_snapshot.rs  storage.rs  storage_tests.rs  url_validation_tests.rs
apps/macos/src-tauri/src/collection/: account_capabilities.rs  account_input.rs  account_plan.rs  account_plan_filters.rs  account_plan_tests.rs  capabilities.rs  form_plan.rs  plan_estimate.rs  plan_validation.rs  plan_validation_tests.rs
apps/macos/src-tauri/src/exports/: excel.rs  pdf.rs
apps/macos/src-tauri/src/exports/excel/: account_export.rs
apps/macos/src-tauri/src/prompts/: regression.rs  tests.rs
apps/macos/src-tauri/src/records/: account_fields.rs  storage.rs  storage_tests.rs  summary_tests.rs
apps/macos/src-tauri/src/secrets/: snapshot.rs
apps/macos/src-tauri/src/tasks/: deletion.rs  execution.rs  execution_claim_tests.rs  execution_completion_tests.rs  execution_tests.rs  plans.rs  presentation.rs  recovery.rs  recovery_tests.rs  revision_tests.rs  revisions.rs  snapshot.rs  test_support.rs  tests.rs  validation.rs  worker.rs  worker_fence.rs  worker_lock.rs  worker_snapshot_tests.rs  worker_takeover_tests.rs  worker_tests.rs  worker_v4_tests.rs
apps/macos/src-tauri/src/tasks/execution/: partial.rs  terminal.rs
apps/macos/src-tauri/src/tasks/execution/terminal/: failure.rs
apps/macos/src-tauri/src/tasks/recovery/: checkpoint.rs  terminal.rs
apps/macos/src-tauri/src/tasks/worker/: mutations.rs  pipeline.rs  pricing.rs  recovery.rs  runtime.rs  targets.rs
apps/macos/src-tauri/src/tasks/worker/pricing/: test_support.rs
apps/macos/src-tauri/src/tikhub/: account.rs  business_response_tests.rs  collection.rs  collection_tests.rs  response.rs  test_support.rs
apps/macos/src-tauri/src/tikhub/collection/: cursor.rs  request.rs  response.rs
apps/macos/src-tauri/src/tikhub/fixtures/: douyin_account_responses.json  tiktok_account_responses.json  xiaohongshu_account_responses.json
apps/macos/src-tauri/src/workspace/: account_fields_migration.rs  active_run_migration.rs  api_profile_migration.rs  api_profile_migration_tests.rs  collection_pipeline_migration.rs  collection_pipeline_migration_tests.rs  collection_runtime_migration.rs  collection_runtime_migration_tests.rs  core_tests.rs  dispatch_locks.rs  migration_tests.rs  permission_tests.rs  plan_review_migration.rs  run_checkpoint_migration.rs  schema.rs  security.rs  task_intent_migration.rs  task_run_sequence_migration.rs  worker_fence_migration.rs  worker_lease_migration.rs
excel/: 社交平台用户数据收集模板_国家地区版.xlsx
plan/: AI质量与模型配置学习笔记.md  README_文档索引.md  前端技术方案.md  (+7 more)
(+145 files in other folders)
